update offline, online